# fcb-calendar-bot

./: .gitignore  00_REQUIREMENTS.md  AUDIT_REPORT.md  DIAGNOSTICO_EXHAUSTIVO.md  PLAN.md  README.md  bot_barca.py  generar_token.py  log_partidos.md  main.py  pyproject.toml  requirements.txt  test_clubelo.py
.github/workflows/: run_bot.yml
plans/: git_secret_remediation_plan.md  github_actions_remediation.md  token_renewal_plan.md
src/api/: routes.py
src/barca_calendar_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/calendar_cleaner/: cleaner.py  models.py
src/shared/: config.py  logging_config.py
src/sports_summary_agent/: __init__.py  agent.py  feed_client.py  llm_client.py  models.py
src/win_probability_fix/: clubelo_client.py  models.py
tests/: test_debug.py
tests/calendar_cleaner/: test_cleaner.py
tests/sports_summary_agent/: test_feed_client.py  test_integration.py  test_llm_client.py
tests/win_probability_fix/: test_probability.py
